[gd_scene load_steps=10 format=3 uid="uid://cgwir56ogpy61"]

[ext_resource type="Script" path="res://Spells/shockwave/shockwave.gd" id="1_fjwxk"]
[ext_resource type="Texture2D" uid="uid://tqof266kuads" path="res://Spells/shockwave/shockwave.png" id="2_6745l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwk8q"]
size = Vector2(8, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxq7t"]
atlas = ExtResource("2_6745l")
region = Rect2(0, 0, 16, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_csjwn"]
atlas = ExtResource("2_6745l")
region = Rect2(16, 0, 16, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4vxe"]
atlas = ExtResource("2_6745l")
region = Rect2(32, 0, 16, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_si1gn"]
atlas = ExtResource("2_6745l")
region = Rect2(48, 0, 16, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxtru"]
atlas = ExtResource("2_6745l")
region = Rect2(64, 0, 16, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_2o3j5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxq7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csjwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4vxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si1gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxtru")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[node name="Shockwave" type="Node2D"]
script = ExtResource("1_fjwxk")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_gwk8q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_2o3j5")
autoplay = "default"
frame = 4
frame_progress = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
